@startuml SmartHome_Universal

' Version ultra compatible para cualquier renderizador PlantUML
skinparam monochrome false

class Usuario {
  -id_usuario : int
  -clave : string
  -rol : string
  -dispositivos_hogar : List
  +verificar_clave() : boolean
  +agregar_dispositivo() : void
  +buscar_dispositivo_por_id() : DispositivoHogar
  +contar_dispositivos() : int
}

class Perfil {
  -nombre : string
  -mail : string
  -telefono : string
  -registro_actividad : List
  +registrar_actividad() : void
  +limpiar_registro() : void
  +to_dict() : dict
}

class DispositivoHogar {
  -id_dispositivo : string
  -nombre : string
  -tipo : string
  -es_esencial : boolean
  -estado_dispositivo : boolean
  +encender() : void
  +apagar() : void
  +toggle() : void
  +es_esencial() : boolean
}

class Automatizacion {
  -nombre : string
  -dispositivos : List
  +activar() : int
}

class Hogar {
  -id_hogar : int
  -ubicacion : string
  -tipo_de_vivienda : string
  +get_id_hogar() : int
}

class DispositivoControl {
  -dispositivos_activos : int
  -dispositivos_apagados : int
  +calcular_total_dispositivos() : int
}

Usuario ||--|| Perfil
Usuario ||--o{ DispositivoHogar
Automatizacion o--o{ DispositivoHogar
Usuario ..> Hogar
Usuario ..> DispositivoControl

@enduml